--- a/manifest.json
+++ b/manifest.json
@@ -19,12 +19,12 @@
   },
   "permissions": ["tabs", "activeTab", "scripting"],
   "background": {
-    "service_worker": "scripts/background.js"
+    "service_worker": "src/scripts/background.js"
   },
   "content_scripts": [
     {
       "matches": ["https://www.trollandtoad.com/cart"],
-      "js": ["scripts/content.js"]
+      "js": ["src/scripts/content.js"]
     }
   ],
   "host_permissions": [
