--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
   "manifest_version": 3,
   "name": "Troll&Toad Export",
   "description": "Extensión para compradores de Troll&Toad",
-  "version": "1.1.0",
+  "version": "1.1.4",
   "action": {
-    "default_popup": "popup.html",
-    "default_title": "Opciones de exportación",
+    "default_popup": "src/popup.html",
+    "default_title": "Troll&Toad Export",
     "default_icon": {
       "16": "src/img/dragonite-128.jpg",
       "48": "src/img/dragonite-128.jpg",
@@ -28,6 +28,7 @@
     }
   ],
   "host_permissions": [
-    "https://www.trollandtoad.com/*"
+    "https://www.trollandtoad.com/*",
+    "https://www.tcgplayer.com/*"
   ]
 }
